--- a/python-signals/requirements.txt
+++ b/python-signals/requirements.txt
@@ -1,9 +1,10 @@
 fastapi==0.109.0
-uvicorn[standard]==0.27.0
-pydantic==2.5.3
-pandas==2.1.4
+uvicorn==0.27.0
+redis==5.0.1
+pandas==2.2.0
 numpy==1.26.3
 ta==0.11.0
-redis==5.0.1
+requests==2.31.0
+pydantic==2.5.3
+pydantic-settings==2.1.0
 python-dotenv==1.0.0
-httpx==0.26.0
