--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "bull": "^4.12.0",
+    "ccxt": "^4.5.32",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
